<resources>
    <string name="app_name">Collab Nook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="projectTitle">Title</string>
    <string name="projectDescription">Description</string>
    <string name="projectDomain">Domain</string>
    <string name="projectTechnology">Project Technology</string>
    <string name="collabReq">Collaborator Requirements</string>
    <string name="createProject">Create Project</string>
    <string name="projectCreation">Project Creation</string>
    <string name="userImage">User Image</string>
</resources>